--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "types": ["vite-plugin-pwa/client"]
+    "types": ["vite-plugin-pwa/client", "jest"],
+    "esModuleInterop": true
   },
-  "include": ["src", "src/sw.js"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "src/sw.js"]
 }
