feat: test 설정 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
     "types": ["vite-plugin-pwa/client", "jest"],
     "esModuleInterop": true
   },
-  "include": ["src", "src/sw.js"]
+  "include": ["src", "src/sw.js", "**/*.tsx"]
 }
